--- a/MiniProject.html
+++ b/MiniProject.html
@@ -49,15 +49,21 @@
             border-radius: 20px;
             background-color: wheat;
         }
-        #maindiv{
-            display: grid;
-            grid-template-areas: 'a1 a1 a1 a1 a1 a1'
-                                 'b1 b1 b1 c1 c1 c1'
-                                 'd1 d1 d1 e1 e1 e1';
+        #f{ grid-area: f1;
             padding: 20px;
             margin: 20px;
             border-radius: 20px;
-            background-color: gray;
+            background-color: wheat;
+        }
+        #maindiv{
+            display: grid;
+            grid-template-areas: 'a1 a1 a1 b1 b1 b1'
+                                 'c1 c1 c1 d1 d1 d1'
+                                 'e1 e1 e1 f1 f1 f1';
+            padding: 20px;
+            margin: 20px;
+            border-radius: 20px;
+            background-color: darkolivegreen;
         }
     </style>
 </head>
@@ -127,7 +133,22 @@
                 grandson of Maharaja Sawai Jai Singh, the founder of the city of Jaipur, 
                 India. He was so inspired by the unique structure of Khetri Mahal that 
                 he built this grand and historical palace.</p>
-        </div><br><br><br>
+        </div><br>
+        <div align="center" id="f"><img src="https://yometro.com/images/places/gateway-of-india.jpg" 
+            width="500px" height="400px">
+            <h3><a href="https://en.wikipedia.org/wiki/Gateway_of_India" target="_blank">Gate Way of India</a></h3>
+            <p>The Gateway of India is an arch-monument built in the early 20th century 
+                in the city of Mumbai (Bombay), India. It was erected to commemorate the 
+                landing of King-Emperor George V, the first British monarch to visit India, 
+                in December 1911 at Strand Road near Wellington Fountain. The foundation stone 
+                was laid in March 1913 for a monument built in the Indo-Islamic style, inspired 
+                by elements of 16th-century Gujarati architecture. The final design of the monument 
+                by architect George Wittet was sanctioned only in 1914, and construction was 
+                completed in 1924. The structure is a memorial arch made of basalt, which is 
+                26 metres (85 feet) high, with an architectural resemblance to a triumphial arch 
+                as well as Gujarati architecture of the time.
+            </p>
+        </div>
     </div>
     <div><footer>Designed and Developed By Divyesh Saroj</footer></div>
 </body>
