--- a/MiniProject.html
+++ b/MiniProject.html
@@ -55,6 +55,12 @@
             border-radius: 20px;
             background-color: wheat;
         }
+        #Anthem{
+            padding: 20px;
+            margin: 20px;
+            border-radius: 20px;
+            background-color: wheat;
+        }
         #maindiv{
             display: grid;
             grid-template-areas: 'a1 a1 a1 b1 b1 b1'
@@ -150,6 +156,10 @@
             </p>
         </div>
     </div>
+    <div align="center" id="Anthem">
+        <h2>National Anthem</h2>
+        <audio src="NationalAnthem.mp4" controls></audio>
+    </div><br><br><br>
     <div><footer>Designed and Developed By Divyesh Saroj</footer></div>
 </body>
 </html>
